clean up deep dives

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -60,48 +60,49 @@ These are some strongly recommended readings to build your foundations for this 
 
 ## Deep dives
 
-This course covers a wide range of topics, which would be impossible to cover in a semester.
+This course covers a wide range of topics, which would be impossible to cover in a single semester.
 Here are some further materials if you would like to dive a bit deeper on some of the topics, whether it's technical skills, domain insights, or philosophical intuition.
+These are all quite accessible, suitable for final year undergrad or early postgrad students.
 
 ### Foundations (mental healthcare and Singapore)
 
 For building domain empathy and local situational awareness.
 
-1. 🎙️ [All in the Mind](https://www.abc.net.au/listen/programs/allinthemind)
-1. 📖 [Being Mortal: Medicine and What Matters in the End](https://www.goodreads.com/book/show/20696006-being-mortal). Atul Gawande. Discusses the "human" side of clinical outcomes.
-1. 📖 [Essential Psychology: A Concise Introduction](https://www.goodreads.com/book/show/8309374-essential-psychology).
-1. 🎙️ [Hard Drugs](https://harddrugs.worksinprogress.co)
-1. 🎙️ [Health Check by The Straits Times](https://www.straitstimes.com/tags/health-check-podcast)
-1. 📖 [Hello World: Being Human in the Age of Algorithms](https://www.goodreads.com/book/show/43726517-hello-world). Hannah Fry (2018).
-1. 📺 [Human Behavioral Biology - Stanford Lecture Series](https://www.youtube.com/playlist?list=PL848F2368C90DDC3D). Robert Sapolsky (2012).
-1. 📖 [Losing Our Minds](https://www.goodreads.com/book/show/57693494-losing-our-minds). Lucy Foulkes (2024).
-1. 📖 [Myth or Magic: The Singapore Healthcare System](https://www.goodreads.com/book/show/18401211-myth-or-magic---the-singapore-healthcare-system). Jeremy Lim (2013).
-1. 📖 [The Gift of Therapy](https://www.goodreads.com/book/show/21025.The_Gift_of_Therapy). Yalom Irvin.
-1. 📧 [The Hemingway Report Newsletter](https://www.thehemingwayreport.com)
-1. 📖 [The Laws of Medicine](https://www.goodreads.com/book/show/25409816-the-laws-of-medicine). Siddhartha Mukherjee (2015).
-1. 📖 [The Man Who Mistook his Wife for a Hat](https://www.goodreads.com/book/show/63697.The_Man_Who_Mistook_His_Wife_for_a_Hat_and_Other_Clinical_Tales). Oliver Sacks.
-1. 📖 [Why Zebras Don’t Get Ulcers](https://www.goodreads.com/book/show/327.Why_Zebras_Don_t_Get_Ulcers). Robert Sapolsky.
+1. 🎙️ [All in the Mind](https://www.abc.net.au/listen/programs/allinthemind). - Amazing humanistic podcast on mental health from Australia's ABC.
+1. 📖 [Being Mortal: Medicine and What Matters in the End](https://www.goodreads.com/book/show/20696006-being-mortal). Atul Gawande (2014). - Discusses the "human" side of clinical outcomes.
+1. 📖 [Essential Psychology: A Concise Introduction](https://www.goodreads.com/book/show/8309374-essential-psychology). - Philip Banyard, Mark Davies, and Christine Norman (2010). - A good entry-level textbook to start understanding psychology better.
+1. 🎙️ [Hard Drugs](https://harddrugs.worksinprogress.co). - Podcast by Works in Progress.
+1. 🎙️ [Health Check by The Straits Times](https://www.straitstimes.com/tags/health-check-podcast). - Local healthcare podcast by the Straits Times.
+1. 📺 [Human Behavioral Biology - Stanford Lecture Series](https://www.youtube.com/playlist?list=PL848F2368C90DDC3D). Robert Sapolsky (2012). - Slightly outdated, but amazing lecture series about human behavioural biology.
+1. 📖 [Losing Our Minds](https://www.goodreads.com/book/show/57693494-losing-our-minds). Lucy Foulkes (2024). - A great and grounded recent update on modern trends in mental health.
+1. 📖 [Mental health of a nation](https://www.imh.com.sg/Publications/Books/Pages/Mental-Health-of-A-Nation.aspx). Ng Beng Yong and Daniel Fung (2017). - A good overview of mental health in Singapore.
+1. 📖 [Myth or Magic: The Singapore Healthcare System](https://www.goodreads.com/book/show/18401211-myth-or-magic---the-singapore-healthcare-system). Jeremy Lim (2013). - For those trying to better understand Singapore's famously strong healthcare system.
+1. 📖 [The Gift of Therapy](https://www.goodreads.com/book/show/21025.The_Gift_of_Therapy). Yalom Irvin (2001). - Beautifully written, this will help you understand what psychotherapy is about.
+1. 📧 [The Hemingway Report Newsletter](https://www.thehemingwayreport.com). - To understand commercial trends in the mental health industry.
+1. 📖 [The Laws of Medicine](https://www.goodreads.com/book/show/25409816-the-laws-of-medicine). Siddhartha Mukherjee (2015). - To understand the medical discipline better.
+1. 📖 [The Man Who Mistook his Wife for a Hat](https://www.goodreads.com/book/show/63697.The_Man_Who_Mistook_His_Wife_for_a_Hat_and_Other_Clinical_Tales). Oliver Sacks (1985). - One of the best clinician writers, this will take you through several human studies in psychiatry.
 
 ### Toolkit (data science and visual communication)
 
 For mastering the engineering of perception and technical methodology.
 
 1. 📖 [Calling Bullshit: The Art of Skepticism in a Data-Driven World](https://www.callingbullshit.org/index.html). Carl Bergstrom and Jevin West.
-1. 📄 [Digital Phenotyping for Monitoring Mental Disorders: Systematic Review](https://www.jmir.org/2023/1/e46778).
-1. 📖 [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). Dan Jurafsky and James H. Martin (2026).
-1. 📄 [The Psychological Meaning of Words: LIWC and Computerized Text Analysis Methods](https://journals.sagepub.com/doi/10.1177/0261927X09351676). Yla R. Tausczik and James W. Pennebaker (2009).
-1. 📄 [The Science of Visual Data Communication: What Works](https://journals.sagepub.com/doi/10.1177/15291006211051956).
+1. 📄 [Digital Phenotyping for Monitoring Mental Disorders: Systematic Review](https://www.jmir.org/2023/1/e46778). - Introduction to digital phenotyping, a promising methodology in mental health.
+1. 📖 [Pattern Recognition and Machine Learning](https://www.goodreads.com/book/show/55881.Pattern_Recognition_and_Machine_Learning). Chris Bishop (2006). - A classic textbook for learning the foundations of machine learning.
+1. 📖 [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). Dan Jurafsky and James H. Martin (2026). - One of the most popular textbooks for learning NLP.
+1. 📄 [The Psychological Meaning of Words: LIWC and Computerized Text Analysis Methods](https://journals.sagepub.com/doi/10.1177/0261927X09351676). Yla R. Tausczik and James W. Pennebaker (2009). - One of the popular frameworks for semantic analysis of natural language before the era of LLMs.
+1. 📄 [The Science of Visual Data Communication: What Works](https://journals.sagepub.com/doi/10.1177/15291006211051956). - A rigorous evaluation of what works in visual communication.
 
-### Building the future (GenAI and product building)
+### Building the future (GenAI and product)
 
 For understanding the cutting edge and its implementation challenges.
 
 1. 📖 [AIQ](https://www.goodreads.com/book/show/39328092-aiq). Nick Polson and James Scott (2018).
-1. 📖 [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
-1. 📊 [Model AI governance framework for Generative AI](https://aiverifyfoundation.sg/wp-content/uploads/2024/05/Model-AI-Governance-Framework-for-Generative-AI-May-2024-1-1.pdf)
-1. 🎙️ [One North Stories](https://one-north-stories.captivate.fm)
-1. 📊 [State of Clinical AI Report 2026](https://www.arise-ai.org/report)
-1. 📖 [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.goodreads.com/book/show/123239515-the-ai-revolution-in-medicine). Peter Lee, Carey Goldberg, and Isaac Kohane (2023).
+1. 📊 [ARISE State of Clinical AI Report 2026](https://www.arise-ai.org/report). - Recent Stanford report on the state of clinical AI.
+1. 📖 [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024). - Discussion of our relationship with AI and how to move forward.
+1. 📊 [Model AI governance framework for Generative AI](https://aiverifyfoundation.sg/wp-content/uploads/2024/05/Model-AI-Governance-Framework-for-Generative-AI-May-2024-1-1.pdf). - A local AI governance framework.
+1. 🎙️ [One North Stories](https://one-north-stories.captivate.fm). - A local podcast that discusses high-tech innovation startups.
+1. 📖 [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.goodreads.com/book/show/123239515-the-ai-revolution-in-medicine). Peter Lee, Carey Goldberg, and Isaac Kohane (2023). - On how LLMs will revolutionise healthcare.
 1. 📖 [The Design of Everyday Things](https://www.goodreads.com/book/show/17290807-the-design-of-everyday-things). Donald Norman (1988).
 1. 📖 [The Innovator's Prescription](https://www.goodreads.com/book/show/3487850-the-innovator-s-prescription). Clayton M. Christensen, Jerome H. Grossman, and Jason Hwang (2008).
 1. 📖 [Working Backwards](https://www.goodreads.com/book/show/53138083-working-backwards). Colin Bryar.
@@ -110,8 +111,23 @@ For understanding the cutting edge and its implementation challenges.
 
 For avoiding the "Cargo Cult" trap and ensuring clinical utility.
 
-1. 📄 [Cargo Cult Science](https://fermatslibrary.com/s/cargo-cult-science#email-newsletter).
-1. 📄 [Construct Validity In Psychology Research](https://www.simplypsychology.org/construct-validity-definition-examples.html).
-1. 📄 [Illusory generalizability of clinical prediction models](https://www.science.org/doi/10.1126/science.adg8538).
-1. 📄 [Perspectives on Machine Learning from Psychology's Reproducibility Crisis](https://arxiv.org/abs/2104.08878).
-1. 🌐 [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021).
+1. 📄 [Cargo Cult Science](https://fermatslibrary.com/s/cargo-cult-science#email-newsletter). Richard Feynman. - You should read this article at least once every year.
+1. 📄 [Construct Validity In Psychology Research](https://www.simplypsychology.org/construct-validity-definition-examples.html). - Discusses "construct validity" and why it's so important in psychology.
+1. 📖 [Hello World: Being Human in the Age of Algorithms](https://www.goodreads.com/book/show/43726517-hello-world). Hannah Fry (2018). - Will make you think more critically about data and algorithms.
+1. 📄 [Illusory generalizability of clinical prediction models](https://www.science.org/doi/10.1126/science.adg8538). - Makes you more critical when reading about academic articles promising high accuracy.
+1. 📄 [Perspectives on Machine Learning from Psychology's Reproducibility Crisis](https://arxiv.org/abs/2104.08878). Bell and Kampman (2021). - A discussion on what the machine learning research community can learn from psychology's reproducibility crisis.
+1. 🌐 [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021). - Amazing course on how we can make psychology a more robust discipline.
+1. 📄 [The Theory Crisis in Psychology: How to Move Forward](https://journals.sagepub.com/doi/10.1177/1745691620970586). Markus Eronen and Laura Bringmann (2021). - Interesting perspective on the fundamental difficulty of advancing psychology as a science.
+
+### The synthesis (intersection of AI, psychology, and art)
+
+If this course resonates with you on a more personal level, these are some resources beyond the scope of the course.
+For exploring the fascinating intersection of AI, psychology, and art even further.
+
+1. 🎬 [All Watched over by Machines of Loving Grace](https://www.filmsforaction.org/watch/bbc-all-watched-over-by-machines-of-loving-grace/). - Old school (2011) BBC documentary about the relationship between humans and machines.
+1. 📄 [Conversation self-play for psychotherapy discovery and understanding](https://arxiv.org/abs/2503.16521). Kampman et al. (2025). - A recent paper of mine suggesting that LLMs can help discover new ways of doing psychotherapy.
+1. 🌐 [Dimensional App](https://www.dimensional.me). - A cool mobile app for a huge range of psychometric testing and learning about yourself, and a great demonstration of data science's role in psychology.
+1. 📖 [Godel, Escher, Bach](https://www.goodreads.com/en/book/show/24113.G_del_Escher_Bach) - Many cognitive scientist and computer science students have (tried to) read this famous book, it's quite mind-bending!
+1. 🎬 [Her (Film)](https://www.imdb.com/title/tt1798709/). - Fun movie from 2013 that makes you reflect on the feasibility and desirability of AI companionship.
+1. 📖 [The Age of Insight](https://www.goodreads.com/book/show/12263681-the-age-of-insight). - Ambitious book written by a Nobel Prize winning neuroscientist, it explores the history of cognitive from 1900 Vienna onwards and discusses the central role of art.
+1. 📖 [What makes us smart](https://www.goodreads.com/book/show/57423834-what-makes-us-smart). Samuel Gershman (2021). - A great conceptualisation on how to think about cognition through a Bayesian lens, which makes you rethink what irrationality (and mental illness) really are.
