update resources list

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -31,6 +31,7 @@ You are free to choose your own datasets for the data visualisation assignment.
 This is a curated list of some datasets, just for your reference or inspiration:
 
 - [Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
+- [Singaporean Mental Health Studies](https://onnokampman.com/files/Singaporean%20Mental%20Health%20Studies.html)
 
 ### Hackathon lab
 
@@ -54,6 +55,7 @@ These are some strongly recommended readings to build your foundations for this 
 1. 📖 [Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025). - A great resource on AI's transformative role in healthcare, with many case studies from Singapore.
 1. 📄 [Large language models could change the future of behavioral healthcare: A proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024). - A nice overview and roadmap of responsible LLM deployments in behavioral healthcare.
 1. 🌐 [Mental Health (Our World in Data)](https://ourworldindata.org/mental-health). - Beautiful graphs and rich datasets to increase your understanding of global mental health.
+1. 📄 [Rules of ML](https://developers.google.com/machine-learning/guides/rules-of-ml) - Essential reading for ML engineering.
 1. 🌐 [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025). - Good introduction to the importance of data visualization and some practical advice.
 1. 📄 [Singapore's health-care system: Key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract). Chorh Chuan Tan et al. (2021) - Great introduction to Singapore's healthcare system and national priorities.
 1. 📄 [Tracking the mental health of a nation: Prevalence and correlates of mental disorders in the second Singapore mental health study](https://www.cambridge.org/core/product/identifier/S2045796019000179/type/journal_article). Subramaniam et al. (2020). - Good local overview of mental health prevalence rates.
@@ -86,6 +88,7 @@ For building domain empathy and local situational awareness.
 
 For mastering the engineering of perception and technical methodology.
 
+1. 🌐 [AI Explorables](https://pair.withgoogle.com/explorables/). - Repository of data visualisations and model interpretations.
 1. 📖 [Calling Bullshit: The Art of Skepticism in a Data-Driven World](https://www.callingbullshit.org/index.html). Carl Bergstrom and Jevin West.
 1. 📄 [Digital Phenotyping for Monitoring Mental Disorders: Systematic Review](https://www.jmir.org/2023/1/e46778). - Introduction to digital phenotyping, a promising methodology in mental health.
 1. 📖 [Pattern Recognition and Machine Learning](https://www.goodreads.com/book/show/55881.Pattern_Recognition_and_Machine_Learning). Chris Bishop (2006). - A classic textbook for learning the foundations of machine learning.
@@ -97,11 +100,12 @@ For mastering the engineering of perception and technical methodology.
 
 For understanding the cutting edge and its implementation challenges.
 
-1. 📖 [AIQ](https://www.goodreads.com/book/show/39328092-aiq). Nick Polson and James Scott (2018).
+1. 📖 [AIQ](https://www.goodreads.com/book/show/39328092-aiq). Nick Polson and James Scott (2018). - For understanding how to build human-centered AI products.
 1. 📊 [ARISE State of Clinical AI Report 2026](https://www.arise-ai.org/report). - Recent Stanford report on the state of clinical AI.
 1. 📖 [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024). - Discussion of our relationship with AI and how to move forward.
 1. 📊 [Model AI governance framework for Generative AI](https://aiverifyfoundation.sg/wp-content/uploads/2024/05/Model-AI-Governance-Framework-for-Generative-AI-May-2024-1-1.pdf). - A local AI governance framework.
 1. 🎙️ [One North Stories](https://one-north-stories.captivate.fm). - A local podcast that discusses high-tech innovation startups.
+1. 📊 [PAIR Guidebook](https://pair.withgoogle.com/guidebook/). - Guidebook on how to design AI products by team at Google.
 1. 📖 [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.goodreads.com/book/show/123239515-the-ai-revolution-in-medicine). Peter Lee, Carey Goldberg, and Isaac Kohane (2023). - On how LLMs will revolutionise healthcare.
 1. 📖 [The Design of Everyday Things](https://www.goodreads.com/book/show/17290807-the-design-of-everyday-things). Donald Norman (1988).
 1. 📖 [The Innovator's Prescription](https://www.goodreads.com/book/show/3487850-the-innovator-s-prescription). Clayton M. Christensen, Jerome H. Grossman, and Jason Hwang (2008).
@@ -131,3 +135,4 @@ For exploring the fascinating intersection of AI, psychology, and art even furth
 1. 🎬 [Her (Film)](https://www.imdb.com/title/tt1798709/). - Fun movie from 2013 that makes you reflect on the feasibility and desirability of AI companionship.
 1. 📖 [The Age of Insight](https://www.goodreads.com/book/show/12263681-the-age-of-insight). - Ambitious book written by a Nobel Prize winning neuroscientist, it explores the history of cognitive from 1900 Vienna onwards and discusses the central role of art.
 1. 📖 [What makes us smart](https://www.goodreads.com/book/show/57423834-what-makes-us-smart). Samuel Gershman (2021). - A great conceptualisation on how to think about cognition through a Bayesian lens, which makes you rethink what irrationality (and mental illness) really are.
+1. 📖 [The World After Capital](https://worldaftercapital.org). - Makes the case that attention is the main scarcity now (relevant for social media's role in mental health).
